@@ -23,6 +23,7 @@
   - Add pub_dir option to override publish directory. BZ #830062
   - Removed show_unknown parameter and associated code. BZ #915428
   - Add img_dir parameter to override images directory. BZ #919481
+  - Support all DocBook conditionals. BZ #919486
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
